# qrc-dataset-profiler

./: .gitignore  COMPARISON_PROTOCOL.md  FRONTIER_PROTOCOL.md  NPJ_FRONTIER_PROTOCOL.md  PROTOCOL.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  STATUS.md  TRIAGE.md  pyproject.toml
data/: README.md
docs/: index.html
paper/: IEEEtranDoi.bst  README.md  main.tex  references.bib
results_analysis/: analysis_manifest.json  family_advantage_bootstrap.csv  importance_bootstrap.csv  importances_all.csv  importances_chaos_nonlinearity_complexity_only.csv  importances_without_predictability_proxies.csv  importances_without_r2_linear.csv  robustness_summary.csv  sweep_summary.csv
results_analysis_v2/: family_advantage_bootstrap.csv  importance_bootstrap.csv  importances_all.csv  importances_chaos_nonlinearity_complexity_only.csv  importances_without_predictability_proxies.csv  importances_without_r2_linear.csv  robustness_summary.csv  sweep_summary.csv
results_analysis_v3/: analysis_manifest.json  family_advantage_bootstrap.csv  importance_bootstrap.csv  importances_all.csv  importances_chaos_nonlinearity_complexity_only.csv  importances_without_predictability_proxies.csv  importances_without_r2_linear.csv  robustness_summary.csv  sweep_summary.csv
results_atlas/: atlas_importances.csv  family_usefulness_summary.csv  meta_model_summary.csv  qrc_usefulness_map.csv  usefulness_atlas_manifest.json
results_atlas_v2/: family_usefulness_summary.csv  meta_model_summary.csv  qrc_usefulness_map.csv
results_atlas_v3/: atlas_importances.csv  family_usefulness_summary.csv  meta_model_summary.csv  qrc_usefulness_map.csv  usefulness_atlas_manifest.json
results_calibration_v3/: calibration_catalog.csv  (+3 more)
(+1021 files in other folders)
