[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qrc_dataset_profiler"
version = "0.1.0"
description = "Unified protocol to characterize time-series datasets and test Spin-QRC advantage."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "pyarrow>=14",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Tier-B backstop (completeness check); profiler must degrade gracefully if absent.
backstop = ["pycatch22>=0.4", "tsfresh>=0.20"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
